# cmake-cross-rpi

./: CMakeLists.txt  LICENSE  gsl_tests.cpp  gsl_tests.h  hello.c  main.cpp  readme.md  remote-debugging.md  rpi-toolchain-example.cmake
src/: CMakeLists.txt
src/gpio/: CMakeLists.txt  gpio.cpp  gpio.h
